# cg

./: .gitignore  CMakeLists.txt  README  doxyfile  gcc_filter.sh  gcc_filter.sh.in
cmake/Modules/: FindODB.cmake  UseODB.cmake
filter/: gcc_filter.sh  gcc_filter.sh.in  myfilter.sh
html/: .gitignore  index.css  index.html  main.js
html/app/: app.js
html/app/controllers/: CollectionController.js  IndexController.js  LoginController.js  PlayController.js
html/app/directives/: cgCard.js  cgHull.js  cgSystem.js
html/app/factories/: ClientMessageFactory.js
html/app/partials/: cgCard.html  cgSystem.html  collection.html  indexPage.html  login.html  play.html
html/app/services/: CardDataService.js  WebSockService.js
html/css/: app.css
html/lib/: .gitignore
include/: Utility.hpp  optional.hpp
include/Concurrent/: Queue.hpp
proto/: ClientMessage.proto  Login.proto  compile.sh
serverapp/data/cards/: .gitignore  basic_Mosquito.pb  basic_action_stations.pb  basic_big_missile.pb  basic_disassemble.pb  basic_emp.pb  basic_flare.pb  basic_hangar_crew.pb  basic_higgs_field.pb  basic_irradiate.pb  basic_janitor.pb  basic_jolt_cola.pb  basic_lab_assistant.pb  basic_laser_flurry.pb  basic_mercenary.pb  basic_metal_platee.pb  basic_olga.pb  basic_physicist.pb  basic_programmer.pb  basic_red.pb  basic_repair_droid.pb  basic_revolver_missile.pb  basic_signal_beacon.pb  basic_space_marine.pb  basic_stackoverflow.pb  basic_target_vector.pb  basic_well_stocked.pb  missile.pb  universal.pb  universal_engage.pb  universal_power_cycle.pb
serverapp/data/hulls/: .gitignore  basic_wombat.pb  universal.pb
serverapp/data/systems/: cargo_bay.pb  computer_core.pb  empty_military.pb  empty_science.pb  empty_support.pb  engineering_bay.pb  hangar_bay.pb  laser_battery.pb  missile_launcher.pb  particle_lab.pb  universal.pb  unstable_power_supply.pb
serverapp/proto/: CardData.proto  DataModuleMessages.proto  HullData.proto  PlayModuleMessages.proto  SystemData.proto  Table.proto
serverapp/src/: Card.cpp  Card.hpp  CardProvider.cpp  CardProvider.fwd.hpp  CardProvider.hpp  ConstantDataProvider.fwd.hpp  ConstantDataProvider.hpp  Hull.cpp  Hull.hpp  HullProvider.fwd.hpp  HullProvider.hpp  NewPlayerInitializer.hpp  ProtobufMessageLoader.hpp  RandomProvider.cpp  RandomProvider.hpp  System.cpp  System.hpp  SystemProvider.fwd.hpp  SystemProvider.hpp
serverapp/src/Module/: DataModule.cpp  DataModule.hpp  IndexModule.cpp  IndexModule.hpp  MMRQueue.cpp  MMRQueue.hpp  PlayModule.cpp  PlayModule.hpp  Table.cpp  Table.hpp  TableServer.cpp  TableServer.hpp
serverapp/src/db/: Player.cpp  Player.hpp  ShipPlan.cpp  ShipPlan.hpp  SystemPlan.cpp  SystemPlan.hpp
src/: CMakeLists.txt  GameServer.cpp  GameServer.hpp  LogServer.cpp  LogServer.hpp  Module.hpp  PlayerAccount.cpp  PlayerAccount.hpp  ServerState.hpp  main.cpp  typedefs.hpp
src/GameServer/: GameServerImpl.cpp  GameServerImpl.hpp
src/Module/: AuthModule.cpp  AuthModule.hpp
src/db/: PlayerAccount.hpp
src/include/: NetUtility.hpp  SlotPool.hpp  database.hpp  optional.hpp
src/include/Concurrent/: Queue.hpp
src/msg/: MessageDispatcher.hpp  MessageExtractor.hpp  MessageFactory.hpp  MessageHandler.hpp  pbmsg.hpp
src/proto/: ClientMessage.proto  Login.proto  LoginResponse.proto  Registration.proto  RegistrationResponse.proto  ServerMessage.proto  internal.proto
